k8s/base/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nba-backend-svc
  namespace: nba
  labels:
    app: nba-backend
spec:
  type: ClusterIP
  selector:
    app: nba-backend
  ports:
    - name: http
      port: 8080
      targetPort: 8080
