k8s/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nba-frontend-svc
  namespace: nba
spec:
  type: ClusterIP
  selector:
    app: nba-frontend
  ports:
    - port: 80
      targetPort: 80
